Fixes z-index for notifications (#281)

--- a/packages/app/app/styles/common/notifications.less
+++ b/packages/app/app/styles/common/notifications.less
@@ -12,6 +12,7 @@
     position: fixed;
     padding: 15px;
     width: 100%;
+    z-index: 999;
 }
 
 // Extra Styling depending on type of alert: Success, Info, Failure, Danger
